# DIO-twitter-api

./: .editorconfig  README.md  docker-compose.yml  main.py  pyproject.toml  secrets_1.py
