[tool.poetry]
name = "twtr-api"
version = "0.1.0"
description = ""
authors = ["Fred Melchior"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.14.0"
pymongo = "^4.6.1"
fastapi = "^0.104.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
